# StockPulse

./: .cursorrules  .editorconfig  .env  .eslintrc.js  .gitattributes  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .prettierrc  AUTHENTICATION_SOLUTION.md  DEPLOYMENT_SUMMARY_v0.0.4.md  DEPLOYMENT_SUMMARY_v2.0.0_Epic8.md  Dockerfile.frontend  PRD.md  README.md  RELEASE_NOTES_v0.0.3.md  RELEASE_NOTES_v0.0.4.md  architecture.md  bandit-report.json  commitlint.config.js  config.example.json  create_test_user.py  create_test_user_sql.sql  create_user_simple.py  cursorrules.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  index.html  init-neo4j.sh  jest.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  tailwind.config.ts  testing-report.md  tsconfig.json  tsconfig.node.json  (+5 more)
.husky/: commit-msg  pre-commit
a2a-agents/: README.md  docker-compose.a2a.yml  requirements.txt
data/: stockpulse.db
docs/: AUDIT_REPORT.md  DASHBOARD_CLEANUP_SUMMARY.md  DASHBOARD_DEBUG_INSTRUCTIONS.md  DASHBOARD_ENDPOINT_FIX_SUMMARY.md  DASHBOARD_FIX_SUMMARY.md  DATA_ARCHITECTURE_FIX_SUMMARY.md  DATA_ARCHITECTURE_SUMMARY.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  FRONTEND_FIXES_SUMMARY.md  NEW_DASHBOARD_FEATURES.md  PRD.md  README.md  SECURITY_AUDIT_RESULTS.md  SRC_CLEANUP_SUMMARY.md  StockPulse_Design.md  WIDGET_COMPONENTS_FIX_SUMMARY.md  advanced-features-implementation-plan.md  ag-ui-implementation-guide.md  agent-observability.md  anthropic-mcp-integration.md  api-key-management.md  architecture-story-1.4-mcp-agent-integration.md  architecture-story-1.5-security-hardening.md  architecture.md  authentication-architecture-plan.md  bandit-report.json  code-quality.md  dashboard-design-guide.md  dashboard-implementation-summary.md  dashboard-redesign-summary.md  debug-instructions.txt  docker-infrastructure.md  epic-1.md  epic-11.md  epic-12.md  epic-13.md  epic-14.md  epic-15.md  epic-16.md  epic-18.md  (+20 more)
mcp-servers/: Dockerfile.shared  README.md  requirements.txt
mobile/: account.html  analytics.html  conffirmOrder.html  forgotpassword.html  portfolio.html  signin.html  signup.html  strategies.html  strategyDetails.html  trading.html  welcome.html
public/: hover-test.html
scripts/: README.md  activate_admin.py  create_test_user.py  create_test_user.sql  create_user_simple.py  manual-widget-test.html  simple_backend_test.py  stop-staging.sh  test-widget-persistence.js  test_admin_approval.py  theme-build-optimizer.js
services/: aiAgentService.ts
src/: App.tsx  index.css  index.ts  main.tsx  setupTests.ts
test-results/: .last-run.json  auth-test-report.html  auth-test-report.json
tests/: README.md  (+13 more)
(+707 files in other folders)
